# 3dViewerCPP

./: Makefile  Viewer.tex
Viewer/: CMakeLists.txt  myopenglwidget.h
Viewer/QtGifImage/gifimage/: qgifimage.cpp
Viewer/command/: command.cc  command.h
Viewer/controller/: controller.cc  controller.h
Viewer/memento/: memento.cc  memento.h
Viewer/model/: affine.cc  model.h  parser.cc  point.cc  polygon.cc  vertex.cc  viewerSupport.cc
Viewer/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp
test/: s21_test.cc
